--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body class="main__container">
     <!-- Creating the navigation menu bar -->
   <header class="container_menu">
     <nav class="container--nav">
         <ul class="navegation--list">
-            <li><a>Portfolio</a></li>
-            <li><a>About</a></li>
-            <li><a>Contact</a></li>
+            <li class="navigation--option"><a>Portfolio</a></li>
+            <li class="navigation--option"><a>About</a></li>
+            <li class="navigation--option"><a>Contact</a></li>
         </ul>
+        <div class="menu--image">
+            <img src="images\menuUnion.png" alt="Menu button"/>
+        </div>
     </nav>
   </header>
   <!-- This section is the main part, containing heading and a brief description of my work-->
   <main class="main__containerinfo">
-   <h1>Hey there. I’m Reynaldo. I’m a software developer</h1>
-   <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+   <h1 id="titlePortfolio">Hey there. I’m Reynaldo. </h1>
+   <h2 id="developerPortfolio">I’m a software developer</h2>
+   <p id="descriptionPortfolio"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
     don’t hesitate to contact me.</p>
   </main>
 
