--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <section class="container__icons">
     <div class="brand--icon">
-      <img src="images\brand-twitter-filled.png" alt="twitter logo" class="icon--image" />
+        <a><img src="images\brand-twitter-filled.png" alt="twitter logo" class="icon--image" /></a>
     </div>
     <div class="brand--icon">
       <img src="images\brand-gmail.png" alt="gmail logo" class="icon--image">
