Add corresponding changes do to fixing errors shown by Stylelint in CSS file.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
   <section class="container__icons">
     <div class="brand--icon">
-        <a><img src="images\brand-twitter-filled.png" alt="twitter logo" class="icon--image" /></a>
+      <a href="https://twitter.com/"><img src="images\brand-twitter-filled.png" alt="twitter logo" class="icon--image" /></a>
     </div>
     <div class="brand--icon">
-      <img src="images\brand-gmail.png" alt="gmail logo" class="icon--image">
+      <a href="https://google.com"><img src="images\brand-gmail.png" alt="gmail logo" class="icon--image"></a>
     </div>
     <div class="brand--icon">
-        <img src="images\brand-linkedin.png"alt="linkedin logo" class="icon--image">
+      <a href="https://www.linkedin.com/in/reynaldo-casta%C3%B1o/?locale=en_US"><img src="images\brand-linkedin.png"alt="linkedin logo" class="icon--image"></a>
     </div>
     <div class="brand--icon">
-        <img src="images\brand-github-filled.png" alt="github logo" class="icon--image">
+        <a href="https://github.com/ReyAntonio12"><img src="images\brand-github-filled.png" alt="github logo" class="icon--image"></a>
     </div>
     <div class="brand--icon">
-        <img src="images\angellist.png" alt="angellist logo" class="icon--image">
+        <a><img src="images\angellist.png" alt="angellist logo" class="icon--image"></a>
     </div>
   </section>
 </body>
